Display cleanup + server auto start